[gd_scene load_steps=6 format=3 uid="uid://vgbgtyrk7qv6"]

[ext_resource type="Script" path="res://src/Clock/clock.gd" id="1_wwfav"]
[ext_resource type="Texture2D" uid="uid://rtempcot3ibm" path="res://media/Aiguille.png" id="2_j01d7"]
[ext_resource type="Texture2D" uid="uid://b718baisdts41" path="res://media/placeHolder.jpg" id="3_bunlj"]

[sub_resource type="Gradient" id="Gradient_kooqi"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.815476, 0.892857, 0.97619)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)
metadata/_snap_enabled = true

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hj3qn"]
gradient = SubResource("Gradient_kooqi")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[node name="Clock" type="Node2D"]
script = ExtResource("1_wwfav")

[node name="face" type="Sprite2D" parent="."]
rotation = -0.00774738
texture = SubResource("GradientTexture2D_hj3qn")

[node name="HourHand" type="Sprite2D" parent="."]
scale = Vector2(2, 5)
texture = ExtResource("2_j01d7")
offset = Vector2(1, 0.5)

[node name="MinuteHand" type="Sprite2D" parent="."]
rotation = 0.00315857
scale = Vector2(2.5, 7)
texture = ExtResource("2_j01d7")
offset = Vector2(1.25, 0)

[node name="SecondHand" type="Sprite2D" parent="."]
rotation = 0.0109124
scale = Vector2(0.025, 0.155)
texture = ExtResource("3_bunlj")
centered = false
offset = Vector2(-200, -750)
